# SATOSA-SP

./: .gitignore  .pre-commit-config.yaml  Dockerfile  GNUmakefile  README.md  pyproject.toml
.github/workflows/: cd-pipeline.yml  ci-pipeline.yml
src/sp/: app.py  config.py  generate_metadata.py
src/sp/metadata/: satosa-metadata.xml  sp-metadata.xml
tests/: conftest.py  test_app.py
